# flet-sample

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  template.yaml
app/: Dockerfile  pyproject.toml
cdk/: .env.sample  README.md  cdk.json  cdk.ts  package-lock.json  package.json
src/flet_sample/: __init__.py  run_app.py
