[project]
name = "flet-sample"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "k-ibaraki", email = "ibaraki@ncdc.co.jp" }]
dependencies = ["flet>=0.21.1"]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.scripts]
start = 'src.flet_sample.run_app:run'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
